--------------------
Bazaar Release Notes
--------------------

.. contents::


IN DEVELOPMENT
--------------

  NOTES WHEN UPGRADING:

  CHANGES:

   * bzr main script cannot be imported (Benjamin Peterson)

   * When a plugin cannot be loaded as the file path is not a valid
     python module name bzr will now strip a ``bzr_`` prefix from the
     front of the suggested name, as many plugins (e.g. bzr-svn)
     want to be installed without this prefix. It is a common mistake
     to have a folder named "bzr-svn" for that plugin, especially
     as this is what bzr branch lp:bzr-svn will give you. (James Westby,
     Andrew Cowie)

  FEATURES:

    * Added mail-mode GNU Emacs mail package as a mail_client.
      (Xavier Maillard, Bojan Nikolic)

  IMPROVEMENTS:

    * Diff is now more specific about execute-bit changes it describes
      (Chad Miller)

    * Fetching data over HTTP is a bit faster when urllib is used.  This is done
      by forcing it to recv 64k at a time when reading lines in HTTP headers,
      rather than just 1 byte at a time.  (Andrew Bennetts)

    * Log --short and --line are much faster when -r is not specified.
      (Aaron Bentley)

    * Merge is faster.  We no longer check a file's existence unnecessarily
      when merging the execute bit.  (Aaron Bentley)

    * The smart protocol client is slightly faster, because it now only queries
      the server for the protocol version once per connection.  Also, the HTTP
      transport will now automatically use a smart server if one is present.
      (Andrew Bennetts)

  BUGFIXES:

    * Add ``root_client_path`` parameter to SmartWSGIApp and
      SmartServerRequest.  This makes it possible to publish filesystem
      locations that don't exactly match URL paths. SmartServerRequest
      subclasses should use the new ``translate_client_path`` and
      ``transport_from_client_path`` methods when dealing with paths received